--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-slick": "^0.28.1",
     "sharp": "^0.30.7",
     "sitemap": "^7.1.1",
+    "stripe": "^14.5.0",
     "styled-components": "5.3.3",
     "swr": "^1.3.0",
     "typescript": "4.8.4",
