--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_GTM=GTM-KEY
+NEXT_PUBLIC_GTM=GTM-P3RKX5JM
 NEXT_PUBLIC_WORDPRESS_BASE_URL="http://localhost:5050"
 NEXT_PUBLIC_WORDPRESS_API_URL='https://lxpq608x.api.sanity.io/v2023-08-01/graphql/production/default'
 NEXT_PUBLIC_WORDPRESS_IMAGES="cdn.sanity.io"
