--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-input-mask": "^3.0.0-alpha.2",
     "react-scroll": "^1.8.7",
     "react-slick": "^0.28.1",
+    "react-youtube": "^10.1.0",
     "sharp": "^0.30.7",
     "sitemap": "^7.1.1",
     "stripe": "^14.5.0",
