--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@builder.io/partytown": "^0.6.4",
     "@loadable/component": "^5.15.2",
     "@sanity/block-content-to-react": "^3.0.0",
+    "@sanity/client": "^6.15.7",
     "@types/react-dom": "18.0.8",
     "axios": "^1.5.1",
+    "dotenv": "^16.4.5",
     "graphql": "^16.6.0",
     "next": "13.0.1",
     "next-compose-plugins": "^2.2.1",
@@ -56,6 +58,7 @@
     "@testing-library/react": "^12.1.5",
     "@types/node": "18.11.9",
     "@types/react": "18.0.24",
+    "autoprefixer": "^10.4.19",
     "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.1",
@@ -70,6 +73,8 @@
     "lint-staged": "^12.5.0",
     "next-sitemap": "^1.9.12",
     "plop": "^3.1.1",
-    "prettier": "^2.7.1"
+    "postcss": "^8.4.38",
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.4.3"
   }
 }
